--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hazel's Website</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>By Hazel's Designs</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Welcome to Hazel's Website Page</h1>
-    <p class="tagline">Affordable, Beautiful, Professional.</p>
-    <nav>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-</body>
-</html>
+
+  <!-- Splash Screen -->
+  <div id="splash-screen" style="position: fixed; width: 100%; height: 100vh; background: #fff; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 9999;">
+    <img src="images/mylogo.png" alt="By Hazel's Designs Logo" style="height: 120px; margin-bottom: 20px;">
+    <h1 style="font-size: 30px; font-family: sans-serif;">By Hazel's Designs</h1>
+  </div>
+
+  <!-- Header -->
+  <header style="display: flex; align-items: center; justify-content: space-between; padding: 20px; background-color: #fff;">
