--- a/index.html
+++ b/index.html
@@ -13,6 +13,42 @@
     <img src="images/mylogo.png" alt="By Hazel's Designs Logo" style="height: 120px; margin-bottom: 20px;">
     <h1 style="font-size: 30px; font-family: sans-serif;">By Hazel's Designs</h1>
   </div>
+  <div id="welcomeScreen" style="
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-color: #fefefe;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  font-family: 'Georgia', serif;
+  font-size: 36px;
+  color: #333;
+  animation: fadeOut 3s forwards;
+  animation-delay: 2s;
+">
+  By Hazel's Designs
+</div>
+
+<style>
+@keyframes fadeOut {
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+</style>
 
   <!-- Header -->
   <header style="display: flex; align-items: center; justify-content: space-between; padding: 20px; background-color: #fff;">
+     <div style="display: flex; align-items: center;">
+    <img src="images/mylogo.png" alt="By Hazel's Designs Logo" style="height: 80px; margin-right: 15px;">
+    <h1 style="font-size: 24px; font-family: 'Georgia', serif; color: #333;">By Hazel's Designs</h1>
+  </div>
+  <nav>
+    <a href="about.html" style="margin: 0 20px; text-decoration: none; font-weight: bold;">About</a>
+    <a href="projects.html" style="margin: 0 20px; text-decoration: none; font-weight: bold;">Projects</a>
+    <a href="contact.html" style="margin: 0 20px; text-decoration: none; font-weight: bold;">Contact</a>
+  </nav>
+</header>
